Fri Feb 11 13:26:49 2000  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/MEM_Acceptor.cpp (accept): Changed to use
	  ACE_reinterpret_cast to cast (sockaddr *) to (sockaddr_in *).
	  This eliminate the warning on HPUX aCC compiler.

Fri Feb 11 01:16:15 2000  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/MEM_Acceptor.cpp:
	* ace/MEM_Acceptor.h: Changed to use ACE_LACKS_INLINE_FUNCTIONS to
	  determine where to include MEM_Acceptor.i file as ASYS_INLINE is
	  used.  Thanks to Marina and SunCC 5 for reporting the problem.

Thu Feb 10 21:57:04 2000  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/MEM_SAP.h
	* ace/MEM_SAP.i (set_buf_len): Removed the const'ness of argument
	  <buf>.

Thu Feb 10 14:09:56 2000  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/ace_dll.dsp:
	* ace/ace_lib.dsp: Added MEM_* files.

Thu Feb 10 13:49:34 2000  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/MEM_SAP.h:
	* ace/MEM_SAP.i:
	* ace/MEM_SAP.cpp: Implemented the adaptation layer for managing
	  shared memory in shared memory transport.

	* ace/MEM_Addr.h:
	* ace/MEM_Addr.i:
	* ace/MEM_Addr.cpp: Implemented the "endpoint" addressing
	  mechanism for shared memory transport.  The ACE_MEM_Addr make
	  sure the "endpoint" is not on an interface that is accessable
	  outside of the running host.  It also serves as endpoint
	  identification and provides the <same_host> checking method.

	* ace/MEM_IO.h:
	* ace/MEM_IO.i:
	* ace/MEM_IO.cpp: Implemented the IO routines for shared memory
	  transport.  Currently, these IO routines treat shared memory
	  transport as a streaming devide and copy the data into its own
	  buffer before sending the data over.  We'll add method for
	  acquiring and sending the internal buffer later.

	* ace/MEM_Acceptor.h:
	* ace/MEM_Acceptor.i:
	* ace/MEM_Acceptor.cpp:
	* ace/MEM_Connector.h:
	* ace/MEM_Connector.i:
	* ace/MEM_Connector.cpp:
	* ace/MEM_Stream.h:
	* ace/MEM_Stream.i:
	* ace/MEM_Stream.cpp: These classes emulate SOCK_* classes but use